Update method signature to latest version of sentry

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,3 +2,8 @@ Version 2.4.0.2
 ===============
 
 * Added ConcurrencyException to the list of Exceptions thrown to the User.
+
+Version 2.4.0.4
+===============
+
+* Update method signature to latest version of sentry.
